--- a/Social/static/signup.css
+++ b/Social/static/signup.css
@@ -103,6 +103,27 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
+.form-field {
+    margin-bottom: 15px;
+}
+
+.form-field label {
+    font-weight: bold;
+}
+
+.form-field input {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+
 .sign-in{
     left: 0;
     width: 50%;
