Implement feature to report user-generated content posts

--- a/Social/post/templates/post/post-details.html
+++ b/Social/post/templates/post/post-details.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <!--==================END OF MIDDLE========================-->
-
+        <!--*****************Middle*************************-->
         <div class="right">
             <div class="messages">
                 <div class="heading">
@@ -37,6 +37,9 @@
                 {% endfor %}
             </div>
             <!--------------------End of Messages-------------->
+            <!--===========================END OF RIGHT====================-->
+            <!--=======================================THEME CUSTOMIZATION========================--> 
+            {%include 'snippets/customize-theme.html' %}
         </div>  
         
     {% endblock content %}
