--- a/Social/post/templates/post/post-report.html
+++ b/Social/post/templates/post/post-report.html
@@ -5,7 +5,8 @@
 
 <div style="width: 450px; margin-left:250px; margin-top:100px">
     <div style="margin-left:100px">
-        <h1>Edit Post</h1>
+        <h1>Report Post</h1>
+        {% comment %} <p>Why are you reporting this post?</p> {% endcomment %}
     </div>
 
     <form method='POST' style="height:40%">
@@ -16,4 +17,5 @@
     </form>
 </div>
 
-    {%endblock content%}
+
+    {% endblock content %}
