--- a/Social/post/templates/post/tag.html
+++ b/Social/post/templates/post/tag.html
@@ -15,5 +15,6 @@
         {% endfor %}                  
     </div>
     <!----------------End of FEEDS------------>
+    {%include 'snippets/customize-theme.html' %}
 </div>  
 {% endblock content %}
