--- a/Social/post/templates/post/post-delete.html
+++ b/Social/post/templates/post/post-delete.html
@@ -1,46 +1,7 @@
 {%extends 'layouts/d.html'%}
 {%load static%}
     {%block content%} 
-    <div class="middle" style="width: 550px;">
-    <div class="feeds">
-    <div class="feed">
-      <div class="head">
-            <div class="user">
-                <div class="profile-photo">
-                    <img src="{{post.user.profile.image.url}}"/>
-                </div>
-                <div class="ingo">
-                    <h3>{{post.user.profile.name}}</h3>
-                    <small>{{post.posted|date:"d M Y"}}</small>
-                </div>
-            </div>
-        </div> 
-        <div class="photo">
-            <a href="{%url 'post-details' post.id%}">
-                <img src="{{post.picture.url}}" alt="Alternative text"  style="width: 500px; height: 381px; object-fit: cover;" >
-            </a>
-        </div>
-
-        <div class="caption">
-            <p><b>@{{post.user.username}}</b> {{post.caption}}
-                <span class="harsh-tag">{% for tag in post.tag.all%}<a href ="{{tag.get_absolute_url}}">#{{tag}}</a>{% endfor %}</span></p>
-        </div>
-        <div>
-            {% if post.comments.count <= 1  %}
-             <div class="comments text-muted"> {{post.comments.count}} Comment</div>
-            {%elif post.comments.count > 1%}
-            <div class="comments text-muted"> {{post.comments.count}} Comments</div>
-             {%endif%}
-            {% if post.likes.count > 1 %}
-            <div class="comments text-muted">{{ post.likes.count }} Like</div>
-            {% else %}
-            <div class="comments text-muted">{{ post.likes.count }} Likes</div>
-            {% endif %} 
-             
-        </div>
-    </div> 
-</div>
-</div>
+    {%include 'snippets/post-overview.html' %}
 
 {% comment %} <div class="box" style="width: 450px; margin-left:250px "> {% endcomment %}
 <div style="width: 450px; margin-left:250px; margin-top:100px">
