--- a/Social/post/templates/post/post.html
+++ b/Social/post/templates/post/post.html
@@ -12,9 +12,13 @@
                     <small>{{post.posted|date:"d M Y"}}</small>
                 </div>
             </div>
-            <span class="edit">
+
+            <a class="edit popup-trigger">
+              <span class="edit"> 
                 <i class="uil uil-ellipsis-h"></i>
-            </span>
+              </span>
+            </a>
+          {%include 'snippets/control-popup.html'%}
         </div>
         <div class="photo">
             <a href="{%url 'post-details' post.id%}">
@@ -35,15 +39,6 @@
 
       <span><i class="uil uil-share-alt"></i></span>
 
-      {%if post.user.profile.user == request.user%}
-      <a href="{%url 'delete-post' post.id%} ">
-      <span><i class="uil uil-trash-alt"></i></span> 
-      </a>
-      <a href="{%url 'edit-post' post.id%} ">
-        <span><i class="uil uil-edit-alt"></i></span> 
-        </a>
-      {%endif%}
-
     </div>
     <div class="bookmark">
       <a
@@ -59,17 +54,6 @@
     </div>
   </div>
   
-  {% comment %} <div class="liked-by" id="like-section-{{ post.id }}">
-    <!-- <span><img src="{% static 'images/profile-10.jpg'%}"></span>
-      <span><img src="{% static 'images/profile-11.jpg'%}"></span>
-      <span><img src="{% static 'images/profile-12.jpg'%}"></span> -->
-     {% comment %} <p>Liked by <b>Gin </b> and <b>2,332 others</b>  {% endcomment %}
-     {% comment %} {% if post.likes.count > 1 %}
-        <p><b>{{ post.likes.count }}</b> Likes</p>
-    {% else %}
-        <p><b>{{ post.likes.count }}</b> Like</p>
-    {% endif %} 
-</div> {% endcomment %} 
 <div id="like-section-{{ post.id }}">
   {% include 'snippets/like_count.html' %}
 </div>
