--- a/Social/templates/layouts/a.html
+++ b/Social/templates/layouts/a.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
+{%load static%}
 {% block layout %}
 <div class="container">
      <!--*****************Left*************************-->
@@ -24,11 +25,15 @@
             Create Post
         </a>
     </div>
-    <!---- ====================End of left=============================-->
+    <!-- ====================End of left=============================-->
            
     {% block content%}
 
     {%endblock content%}
 
 </div>
+{% endblock %}
+
+{% block extra_scripts %}
+<script src= "{% static './index.js' %}" ></script>
 {% endblock %}
