Implement feature to display messages from the database

--- a/Social/templates/snippets/sidebar.html
+++ b/Social/templates/snippets/sidebar.html
@@ -64,7 +64,7 @@
             </div>
         </div>
     </a>
-    <a  class="menu-item " id="messages-notification">
+    <a  class="menu-item " id="messages-notification" href="{% url 'inbox:inbox' %}">
         <span><i class="uil uil-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3>
     </a>
     <a  class="menu-item " href="{% url 'profilefavourite'  %}">
