Add search user functionality for querying other users

--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -26,7 +26,7 @@
 
             <!--*****************Right*************************-->
             <div class="right">
-                <div class="messages">
+                 {% comment %} <div class="messages">
                     <div class="heading">
                         <h4>Messages</h4> <i class="uil uil-edit"></i>
                     </div>
@@ -113,7 +113,7 @@
                             <p class="text-muted">Nothing</p>
                         </div>
                     </div>
-                </div>
+                </div>  {% endcomment %}
                 <!-------------------End of Messages------------->
 
                 <!----------------FRIEND REQUESTS------------------>
