--- a/Social/templates/layouts/d.html
+++ b/Social/templates/layouts/d.html
@@ -3,7 +3,7 @@
 
  {% block extra_css %}
 <link rel="stylesheet" href= "{% static '/signup.css' %}" >
-{% endblock %} }
+{% endblock %} 
 
 {% block layout %}
 <div class='container' id='form'>
