--- a/Social/templates/snippets/sidebar.html
+++ b/Social/templates/snippets/sidebar.html
@@ -3,7 +3,7 @@
     <a  class="menu-item active"  href = "{% url 'home' %}">
         <span><i class="uil uil-home"></i></span><h3>Home</h3>
     </a>
-    <a  class="menu-item">
+    <a  class="menu-item" href = "{% url 'search' %}">
         <span><i class="uil uil-search"></i></span><h3>Search</h3>
     </a>
     <a  class="menu-item">
