Corrected: Enabled click functionality for search results.

--- a/Social/userauths/templates/userauths/list_search.html
+++ b/Social/userauths/templates/userauths/list_search.html
@@ -1,9 +1,11 @@
     {%for user in users%}
         <div class="user-card" >
+            <a href = "{% url 'userprofile' user.profile.user %}">
                 <img src="{{user.profile.avatar}}" alt="{{user.profile.name}}" class="user-avatar">
                 <h2>{{user.profile.name}}</h2>
                 <p class="user-info">@{{user.profile.user.username}}</p>
                 <p class="user-location"><i class="fas fa-map-marker-alt"></i> {{user.profile.location}}</p>
+            </a>
         </div>
     {%endfor%}
 
