add feature: user registration triggers verification email.

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load allauth account %}
 {% load socialaccount %}
 {%block content%}
-        <h1>Login In</h1>
+        <h1>Log In</h1>
             <p style="margin-top:20px">Continue with </p>
                 <div class="social-icons" style="margin:5px">
                     <a href="#"class="icon">
