--- a/userauths/templates/userauths/search.html
+++ b/userauths/templates/userauths/search.html
@@ -30,6 +30,7 @@
 
 
     <div class="right" style="display: none;"> <!-- Right content --> </div>
+    {%include 'snippets/customize-theme.html' %}
 
     {% comment %} <footer>
         <p>&copy; 2023 SocialConnect. All rights reserved.</p>
