--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -4,7 +4,7 @@
             <div class="user">
                 <div class="profile-photo">
                     <a href = "{% url 'userprofile' post.user.profile.user %}">
-                     <img src="{{post.user.profile.image.url}}"/>
+                     <img src="{{post.user.profile.avatar}}"/>
                 </div>
                 <div class="ingo">
                     <h3>{{post.user.profile.name}}</h3>
