--- a/templates/snippets/post-overview.html
+++ b/templates/snippets/post-overview.html
@@ -4,7 +4,7 @@
       <div class="head">
             <div class="user">
                 <div class="profile-photo">
-                    <img src="{{post.user.profile.image.url}}"/>
+                    <img src="{{post.user.profile.avatar}}"/>
                 </div>
                 <div class="ingo">
                     <h3>{{post.user.profile.name}}</h3>
