feat: update website name to [Buddy]

--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -3,7 +3,7 @@
     <div class="container">
         <h2 class="log">
             <a href = "{% url 'home' %}">
-            Social
+            Buddy
             </a>
         </h2>
         <!-- <div class="search-bar">
