--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -6,7 +6,7 @@
     <a  class="menu-item" href = "{% url 'search' %}">
         <span><i class="uil uil-search"></i></span><h3>Search</h3>
     </a>
-    <a  class="menu-item">
+    <a  class="menu-item" href="{% url 'inbox:world_chat' %}">
         <span><i class="uil uil-compass"></i></span><h3>Explore</h3>
     </a>
     <a  class="menu-item" id="notifications">
